# VaultSwap

./: .gitignore  Attack_Vectors_DEX_Comprehensive_Analysis.md  Attack_Vectors_DEX_Comprehensive_Analysis.tex  Building_DEX_2025_Comprehensive_Analysis.md  Building_DEX_2025_Comprehensive_Analysis.tex  CTO_Meeting_Responses.md  CTOmeeting.txt  DEX_CORE_Development_Expenses.md  Developer_Challenges_Analysis.md  Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  Haskell_Rust_Developer_Challenges.md  README.md  Secure_DEX_Development_Plan.md  UltranaDEXdesc.txt  Ultrana_DEX_Competitive_Analysis.tex  Ultrana_DEX_Development_Schedule.tex  Underwater_Obstacles_Summary.md  evm-dex-demo-analysis-report.md  recommendations.md
evm-dex-demo/: README.md
evm-dex-demo/server/: app.js
microservices-architecture/: ARCHITECTURE_SUMMARY.md  CACHING_DATABASE_SUMMARY.md  DEX_ARCHITECTURE_ENHANCEMENT.md  DEX_ARCHITECTURE_IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml
microservices-architecture/api-gateway/: pom.xml
microservices-architecture/caching-strategy/: README.md
microservices-architecture/cross-chain-service/: pom.xml
microservices-architecture/rust-services/solana-gateway-service/: Cargo.toml
microservices-architecture/rust-services/solana-gateway-service/src/: main.rs  solana_client.rs
smart-contracts/: README.md  SMART_CONTRACTS_SUMMARY.md  hardhat.config.js  package.json
terraform/: ATTACK_TYPES_SUMMARY.md  COMPREHENSIVE_ATTACK_SIMULATION_SUMMARY.md  DEPLOYMENT_ISSUES_ANALYSIS.md  PREVENTION_CHECKLIST.md  README.md  deploy.sh  environments.tf  issue-detection.yml  main.tf  outputs.tf  terraform.tfvars.example  troubleshoot.sh  versions.tf
(+96 files in other folders)
